--- a/websiteFromOdin/style.css
+++ b/websiteFromOdin/style.css
@@ -1,5 +1,29 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+
+body {
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
 *{
-    outline: 1px solid red;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* outline: 1px solid red; */
+}
+body{
+    overflow-y: scroll;
+    /* overflow: hidden; */
 }
 .first-page{
     background-color: #1F2937;
@@ -8,11 +32,14 @@
     width: 100%;
     height: 100px;
     display: flex;
-    justify-content: space-around; 
+    justify-content: space-between; 
+    padding: 20px 60px 20px 60px;
+    /* position:fixed; */
 }
 .go-to{
+    flex-basis: 400px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 .logo-link h1{
@@ -20,4 +47,78 @@
 }
 .go-to ul{
     color: rgb(194, 194, 194);
+}
+.body{
+    height: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+.blocks{
+    height: 300px;
+    width: 500px;
+}
+.image-placeholder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: gray;
+}
+.description h1{
+    font-size: 3rem;
+    color: antiquewhite;
+}
+.description p{
+    color: antiquewhite;
+}
+.image-placeholder p{
+    color: aliceblue;
+}
+.description h1,
+.description p{
+    margin: 0;
+    padding: 0;
+}
+.description h1{
+    margin-top: 20px;
+}
+.description button{
+    width: 120px;
+    height: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: #3882F6;
+    color: white;
+}
+.second-page-box{
+    background: white;
+}
+.first-box{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.second-box{
+    height: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+.second-box-inside-boxes{
+    height: 300px;
+    width: 170px;
+}
+.pics{
+    width: 100%;
+    height: 140px;
+    border-radius: 10px;
+    border: 3px solid rgb(32, 170, 255);
+}
+.second-box-inside-boxes p{
+    text-align: center;
 }
