--- a/websiteFromOdin/style.css
+++ b/websiteFromOdin/style.css
@@ -45,8 +45,9 @@ body{
 .logo-link h1{
     color: white;
 }
-.go-to ul{
+.go-to a{
     color: rgb(194, 194, 194);
+    text-decoration: none;
 }
 .body{
     height: 400px;
@@ -121,4 +122,71 @@ body{
 }
 .second-box-inside-boxes p{
     text-align: center;
+}
+.third-page{
+    height: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+}
+.contents{
+    height: 200px;
+    width: 600px;
+    padding: 10px;
+}
+.contents p{
+    font-size: 35px;
+    font-style: italic;
+}
+.contents h1{
+    margin-top: 10px;
+    font-style: oblique;
+    font-size: larger;
+    text-align: right;
+}
+.fourth-page{
+    height: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.fourth-page-contents{
+    height: 100px;
+    width: 700px;
+    padding: 20px 40px 20px 40px;
+    background-color: rgb(7, 119, 255);
+    display: flex;
+    justify-content: space-between;
+}
+.jk p{
+    size: 3px;
+    color: white;
+}
+.fourth-page-contents button{
+    margin-top: 10px;
+    height: 40px;
+    width: 100px;
+    border-radius: 10px;
+    border: 2px solid white;
+    background-color: rgb(7, 119, 255);
+    color: white;
+    transition: .3s ease;
+}
+.fourth-page-contents button:hover{
+    border: 2px solid black;
+    background-color: white;
+    color:rgb(7, 119, 255);
+}
+.fifth-page{
+    height: 100px;
+    width: 100%;
+    background-color: #1F2937;
+    text-align: center;
+    padding:30px;
+}
+.fifth-page p{
+    color: white;
 }
