--- a/createWebPageLoginOrSignUp/style.css
+++ b/createWebPageLoginOrSignUp/style.css
@@ -20,7 +20,7 @@
     align-items: center;
 }
 .title p{
-    font-family: monospace;
+    font-family: fantasy;
     color: white;
     font-size: 2rem;
 }
@@ -71,8 +71,15 @@
     width: 200px;
     height: 25px;
     border-radius: 5px;
-    opacity: .3;
-    transition: ease-in-out .2s;
+    padding-left: 5px;
+    transition: border ease-in-out .2s, opacity ease-in-out .2s;
+}
+.fill-ups input:invalid{
+    border: 2px solid rgb(246, 0, 0);
+    opacity: 1;
+}
+.fill-ups input:valid{
+    border: 2px solid rgb(255, 255, 255);
 }
 .fill-ups input:hover{
     border: 2px solid rgb(0, 119, 71);
@@ -84,7 +91,7 @@
     border-radius: 5px;
     background-color: rgb(0, 119, 71);
     color: white;
-    border: 0cap;
+    border: none;
 }
 .have-acc{
     margin: 30px 0 0 0;
